# sensitivity-app

./: .gitignore  Pipfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
services/auth-service/: .env  Dockerfile  Pipfile  main.py
services/auth-service/app/: auth.py  config.py  routes.py  schema.py
services/auth-service/app/db/: crud.py  database.py  hashing.py  models.py
services/file-service/: .env  Dockerfile  Pipfile  main.py
services/file-service/app/: middleware.py  routes.py  run_celery.py  schema.py  sensitivity.py  uploadFileText.py  utils.py
services/file-service/app/celery_file/: celery.py  celeryconfig.py  tasks.py
services/file-service/app/db/: crud.py  database.py  models.py
tests/: test_sensitivity_app.py
