[tool.poetry]
name = "sensitivity-app"
version = "0.1.0"
description = ""
authors = ["Anthony <anthonyfong100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.60.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
